--- a/View/AddView.xaml
+++ b/View/AddView.xaml
@@ -27,6 +27,6 @@
             <Label Content="Photo Path"/>
             <TextBox Grid.Row="0" Text="{Binding CarPhoto}"/>
         </StackPanel>
-        <Button Grid.Row="3" Content="Add" Height="50" Command="{Binding SaveCommand}"/>
+        <Button Grid.Row="3" Content="Save" Height="50" Command="{Binding SaveCommand}"/>
     </Grid>
 </Window>
