--- a/View/EditView.xaml
+++ b/View/EditView.xaml
@@ -3,9 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfHomework1.View"
         mc:Ignorable="d"
-        Title="AddView" Height="250" Width="400">
+        Title="Edit" Height="250" Width="400">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -27,6 +26,6 @@
             <Label Content="Photo Path"/>
             <TextBox Grid.Row="0" Text="{Binding CarPhoto}"/>
         </StackPanel>
-        <Button Grid.Row="3" Content="Edit" Height="50" Command="{Binding SaveCommand}"/>
+        <Button Grid.Row="3" Content="Edit" Height="50" Command="{Binding EditCommand}"/>
     </Grid>
 </Window>
